28 August 2006: Wouter
	- echo messages in nsdc made clearer. nsdc notify and nsdc update
	  only send notify messages to slaves / localhost to force transfers.
	- initial NSEC3-PARAM type code entry. parsed, ignored.

25 August 2006: Wouter
	- disabled make test target as tests are not shipped.
	- performed prerelease static snapshot.
	- updates to the DIFFERENCES document.

24 August 2006: Wouter
	- Fix bug 141 port from 2.3.6, copies behaviour from bind 9.3.2.
	- Added a test for bug 141.
	- Bug141: save the opcode from the query.

23 August 2006: Wouter
	- Fixed % by 0 exception in the bugfix #139.
	- Fixed RFC 4035 says CD flag SHOULD be cleared on authoritative
	  reponses, now NSD clears the CD flag. This is bug #140.
	  RFC 4035 could be confusing on this, as it states 'all servers
	  MUST copy the CD bit' more than once, but then makes clear only 
	  recursive servers are meant with that statement.
	- Differences document updates for bind 9.3.2 and nsd 3.

22 August 2006: Wouter
	- version number to 3.0.0 in preparation for release.
	- Bug #139: resync stats to whole period. Fixed.

21 August 2006: Wouter
	- check for error in ftruncate call.
	- replaced fwrite call with write_data call from util that does
	  error checking.

15 August 2006: Wouter
	- removed unused struct nsd.named8_stats variable.
	- Bug #138: nsd aborts trying to bind all interfaces if ip6 is not
	  enabled, instead it will fallback to ip4.

14 August 2006: Wouter
	- Added test for rollback of an IXFR transfer by xfrd.
	- Added test for reload timeout in xfrd, the reload does happen after
	  a while, but not immediately.
	- Test that makes xfrd connect to ip6 address.
	- Test that overloads the number of tcp connections in xfrd,
	  simulating a slow master, so that zones have to queue up to get it.
	- code coverage is now 2514 of 10636 uncovered. Still a lot uncovered.
	- ixfr queries return NOT_IMPL errors.

11 August 2006: Wouter