@@ -522,7 +522,7 @@ find_zone(namedb_type* db, const dname_type* zone_name, nsd_options_t* opt,
 	zone->soa_nx_rrset = 0;
 	zone->ns_rrset = 0;
 #ifdef NSEC3
-	zone->nsec3_rrset = NULL;
+	zone->nsec3_soa_rr = NULL;
 	zone->nsec3_last = NULL;
 #endif
 	zone->dirty = region_alloc(db->region, sizeof(uint8_t)*child_count);
