@@ -753,7 +753,7 @@ answer_delegation(query_type *query, answer_type *answer)
 			add_rrset(query, answer, AUTHORITY_SECTION,
 				  query->delegation_domain, rrset);
 #ifdef NSEC3
-		} else if (query->zone->nsec3_rrset) {
+		} else if (query->zone->nsec3_soa_rr) {
 			nsec3_answer_delegation(query, answer);
 #endif
 		} else if ((rrset = domain_find_rrset(query->delegation_domain, query->zone, TYPE_NSEC))) {
@@ -799,7 +799,7 @@ answer_nodata(struct query *query, answer_type *answer, domain_type *original)
 	}
 	
 #ifdef NSEC3
-	if (query->edns.dnssec_ok && query->zone->nsec3_rrset) {
+	if (query->edns.dnssec_ok && query->zone->nsec3_soa_rr) {
 		nsec3_answer_nodata(query, answer, original);
 	} else 
 #endif
@@ -1001,7 +1001,7 @@ answer_authoritative(struct nsd   *nsd,
 
 	/* Authorative zone.  */
 #ifdef NSEC3
-	if (q->edns.dnssec_ok && q->zone->nsec3_rrset) {
+	if (q->edns.dnssec_ok && q->zone->nsec3_soa_rr) {
 		nsec3_answer_authoritative(&match, q, answer, 
 			closest_encloser, nsd->db, qname);
 	} else 
